// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimplexScreen renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          },
        ]
      }
    >
      <Modal
        animationType="none"
        deviceHeight={1334}
        deviceWidth={null}
        hardwareAccelerated={false}
        hideModalContentWhileAnimating={false}
        onBackdropPress={[Function]}
        onModalHide={[Function]}
        onModalWillHide={[Function]}
        onModalWillShow={[Function]}
        onRequestClose={[Function]}
        panResponderThreshold={4}
        scrollHorizontal={false}
        scrollOffset={0}
        scrollOffsetMax={0}
        scrollTo={null}
        statusBarTranslucent={true}
        supportedOrientations={
          Array [
            "portrait",
            "landscape",
          ]
        }
        swipeThreshold={100}
        transparent={true}
        visible={false}
      />
      <Modal
        animationType="none"
        deviceHeight={1334}
        deviceWidth={null}
        hardwareAccelerated={false}
        hideModalContentWhileAnimating={false}
        onBackdropPress={[Function]}
        onModalHide={[Function]}
        onModalWillHide={[Function]}
        onModalWillShow={[Function]}
        onRequestClose={[Function]}
        panResponderThreshold={4}
        scrollHorizontal={false}
        scrollOffset={0}
        scrollOffsetMax={0}
        scrollTo={null}
        statusBarTranslucent={true}
        supportedOrientations={
          Array [
            "portrait",
            "landscape",
          ]
        }
        swipeThreshold={100}
        transparent={true}
        visible={false}
      />
      <View
        style={
          Array [
            Object {
              "color": "#2E3338",
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "justifyContent": "space-between",
              "lineHeight": 22,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          amount
           (
          cUSD
          )
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Array [],
                Object {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            
            25.00
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "color": "#2E3338",
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "justifyContent": "space-between",
              "lineHeight": 22,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#666666",
              },
            ]
          }
        >
          pricePer, {"coin":"cUSD"}
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#666666",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Array [
                  Object {
                    "color": "#666666",
                  },
                ],
                Object {
                  "color": "#666666",
                },
              ]
            }
            testID="undefined/value"
          >
            
            $
            0.76
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#E6E6E6",
              "height": 1,
              "marginVertical": 16,
              "width": "100%",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "color": "#2E3338",
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "justifyContent": "space-between",
              "lineHeight": 22,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          subtotal
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Array [],
                Object {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            
            $
            19.00
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "color": "#2E3338",
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "justifyContent": "space-between",
              "lineHeight": 22,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
              ]
            }
          >
            Simplex
             
            fee
          </Text>
          <View
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "rippleRadius": undefined,
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "marginLeft": 6,
                  "position": "relative",
                  "top": 5,
                },
              ]
            }
          >
            <svg
              fill="none"
              height={14}
              viewBox="0 0 16 16"
              width={14}
            >
              <circle
                cx="8"
                cy="8"
                r="7"
                stroke="#757575"
                strokeWidth="1.25"
              />
              <path
                d="M8 12V7M8 6V5"
                stroke="#757575"
                strokeWidth="1.25"
              />
            </svg>
          </View>
        </View>
        <Text>
          <Text
            style={
              Array [
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                ],
                Object {
                  "color": "#2E3338",
                },
              ]
            }
            testID="undefined/value"
          >
            
            $
            7.00
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "color": "#2E3338",
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "justifyContent": "space-between",
              "lineHeight": 22,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          Total
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                ],
                Object {
                  "color": "#2E3338",
                },
              ]
            }
            testID="undefined/value"
          >
            
            $
            26.00
          </Text>
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
          },
          Object {
            "margin": 16,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 100,
            },
          ]
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          focusable={false}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#97DFC1",
              "flexDirection": "row",
              "flexGrow": 1,
              "height": 48,
              "justifyContent": "center",
              "opacity": undefined,
              "paddingHorizontal": 24,
              "paddingVertical": 5,
            }
          }
        >
          <ActivityIndicator
            color="#FFFFFF"
            size="small"
            testID="Button/Loading"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`SimplexScreen renders correctly 2`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          },
        ]
      }
    >
      <Modal
        animationType="none"
        deviceHeight={1334}
        deviceWidth={null}
        hardwareAccelerated={false}
        hideModalContentWhileAnimating={false}
        onBackdropPress={[Function]}
        onModalHide={[Function]}
        onModalWillHide={[Function]}
        onModalWillShow={[Function]}
        onRequestClose={[Function]}
        panResponderThreshold={4}
        scrollHorizontal={false}
        scrollOffset={0}
        scrollOffsetMax={0}
        scrollTo={null}
        statusBarTranslucent={true}
        supportedOrientations={
          Array [
            "portrait",
            "landscape",
          ]
        }
        swipeThreshold={100}
        transparent={true}
        visible={false}
      />
      <Modal
        animationType="none"
        deviceHeight={1334}
        deviceWidth={null}
        hardwareAccelerated={false}
        hideModalContentWhileAnimating={false}
        onBackdropPress={[Function]}
        onModalHide={[Function]}
        onModalWillHide={[Function]}
        onModalWillShow={[Function]}
        onRequestClose={[Function]}
        panResponderThreshold={4}
        scrollHorizontal={false}
        scrollOffset={0}
        scrollOffsetMax={0}
        scrollTo={null}
        statusBarTranslucent={true}
        supportedOrientations={
          Array [
            "portrait",
            "landscape",
          ]
        }
        swipeThreshold={100}
        transparent={true}
        visible={false}
      />
      <View
        style={
          Array [
            Object {
              "color": "#2E3338",
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "justifyContent": "space-between",
              "lineHeight": 22,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          amount
           (
          cUSD
          )
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Array [],
                Object {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            
            25.00
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "color": "#2E3338",
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "justifyContent": "space-between",
              "lineHeight": 22,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#666666",
              },
            ]
          }
        >
          pricePer, {"coin":"cUSD"}
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#666666",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Array [
                  Object {
                    "color": "#666666",
                  },
                ],
                Object {
                  "color": "#666666",
                },
              ]
            }
            testID="undefined/value"
          >
            
            $
            0.76
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#E6E6E6",
              "height": 1,
              "marginVertical": 16,
              "width": "100%",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "color": "#2E3338",
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "justifyContent": "space-between",
              "lineHeight": 22,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          subtotal
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Array [],
                Object {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            
            $
            19.00
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "color": "#2E3338",
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "justifyContent": "space-between",
              "lineHeight": 22,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "display": "flex",
                "flexDirection": "row",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
              ]
            }
          >
            Simplex
             
            fee
          </Text>
          <View
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "rippleRadius": undefined,
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "marginLeft": 6,
                  "position": "relative",
                  "top": 5,
                },
              ]
            }
          >
            <svg
              fill="none"
              height={14}
              viewBox="0 0 16 16"
              width={14}
            >
              <circle
                cx="8"
                cy="8"
                r="7"
                stroke="#757575"
                strokeWidth="1.25"
              />
              <path
                d="M8 12V7M8 6V5"
                stroke="#757575"
                strokeWidth="1.25"
              />
            </svg>
          </View>
        </View>
        <Text>
          <Text
            style={
              Array [
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                ],
                Object {
                  "color": "#2E3338",
                },
              ]
            }
            testID="undefined/value"
          >
            
            $
            7.00
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "color": "#2E3338",
              "display": "flex",
              "flexDirection": "row",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "justifyContent": "space-between",
              "lineHeight": 22,
              "paddingVertical": 4,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          Total
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                ],
                Object {
                  "color": "#2E3338",
                },
              ]
            }
            testID="undefined/value"
          >
            
            $
            26.00
          </Text>
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
          },
          Object {
            "margin": 16,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 100,
            },
          ]
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          focusable={false}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#97DFC1",
              "flexDirection": "row",
              "flexGrow": 1,
              "height": 48,
              "justifyContent": "center",
              "opacity": undefined,
              "paddingHorizontal": 24,
              "paddingVertical": 5,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={1}
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
                "marginLeft": 0,
                "marginRight": 0,
              }
            }
          >
            continueToProvider, {"provider":"Simplex"}
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
